--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 license_file = LICENSE
 name = phamerate
-version = 0.0.2
+version = 0.1.0
 author = Christian Gauthier
 author_email = chg60@pitt.edu
 description = Assort phage protein sequences into phamilies using MMseqs2
@@ -29,6 +29,8 @@ python_requires = >=3.6
 package_dir =
     =src
 packages = find:
+install_requires =
+    pandas
 
 [options.packages.find]
 where = src
