--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ python_requires = >=3.6
 package_dir =
     =src
 packages = find:
+install_requires =
+    biopython
 
 [options.packages.find]
 where = src
