--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 license_file = LICENSE
 name = phamerate
-version = 0.2.3
+version = 0.2.4
 author = Christian Gauthier
 author_email = chg60@pitt.edu
 description = Assort phage protein sequences into phamilies using MMseqs2
@@ -33,7 +33,7 @@ install_requires =
 
 [options.packages.find]
 where = src
-include = phamerate
+include = phamerate, phamerate.classes, phamerate.functions
 exclude =
 
 [options.entry_points]
