--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-license_file = LICENSE
+license_files = LICENSE
 name = phamerate
-version = 0.2.4
+version = 1.0.0
 author = Christian Gauthier
 author_email = chg60@pitt.edu
 description = Assort phage protein sequences into phamilies using MMseqs2
@@ -18,13 +18,12 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.7
 package_dir =
     =src
 packages = find:
@@ -33,7 +32,7 @@ install_requires =
 
 [options.packages.find]
 where = src
-include = phamerate, phamerate.classes, phamerate.functions
+include = phamerate, phamerate.fileio
 exclude =
 
 [options.entry_points]
