changed name, incremented package version to 1.0.3

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
 license_files = LICENSE
-name = phamerate
-version = 1.0.2
+name = phammseqs
+version = 1.0.3
 author = Christian Gauthier
 author_email = chg60@pitt.edu
 description = Assort phage protein sequences into phamilies using MMseqs2
 long_description = file:README.md
 long_description_content_type = text/markdown
-url = https://github.com/chg60/phamerate
+url = https://github.com/chg60/PhaMMseqs.git
 project_urls =
-    Source = https://github.com/chg60/phamerate
+    Source = https://github.com/chg60/PhaMMseqs.git
 classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
@@ -32,9 +32,9 @@ install_requires =
 
 [options.packages.find]
 where = src
-include = phamerate, phamerate.fileio
+include = phammseqs, phammseqs.fileio
 exclude =
 
 [options.entry_points]
 console_scripts =
-    phamerate = phamerate.__main__:main
+    phammseqs = phammseqs.__main__:main
